--- a/test.properties
+++ b/test.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.0
-#Tue Sep 13 21:22:32 GMT-03:00 2022
-tx_timestamp=148
-modified=yes
+#Tue Sep 20 19:24:30 GMT-03:00 2022
+tx_timestamp=189
+modified=no
 version=2.7.0
