--- a/test.properties
+++ b/test.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.7.0
-#Tue Sep 20 19:24:30 GMT-03:00 2022
+#Tue Sep 20 20:01:50 GMT-03:00 2022
 tx_timestamp=189
-modified=no
+modified=yes
 version=2.7.0
